update readme + fixed hover on mobile

--- a/site/src/components/Accordion.css
+++ b/site/src/components/Accordion.css
@@ -10,7 +10,7 @@
   padding: 20px;
   width: 100%;
 }
-.accordion-label:hover, .accordion-label:active, .active-accordion {
+.accordion-label:active, .active-accordion {
   background-color: var(--yellow);
 }
 .open-accordion, .active-accordion .closed-accordion {
@@ -22,4 +22,10 @@
 .accordion-panel {
   display: none;
   font-size: 0.8rem;
+}
+
+@media (hover: hover) {
+  .accordion-label:hover {
+    background-color: var(--yellow);
+  }
 }
